// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="csytis S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb>
          <div
            className="eysyFD S1"
          >
            <responsiveweb__Base>
              <div
                className="hipbYP S1"
              >
                <div
                  className="S1"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="iHETnT S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb>
          <div
            className="bsUOrP S1"
          >
            <responsiveweb__Base>
              <div
                className="btShGC S1"
              >
                <div
                  className="S1"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="cneigg S1"
              />
            </responsiveweb>
            <responsiveweb__Base>
              <div
                className="gJnpZa S1"
              >
                <responsiveweb__Base>
                  <div
                    className="0 ipjjts S1"
                  >
                    <div
                      className="S1"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<configweb__Base>
  <div
    className="gyQAni S1"
  >
    <responsiveweb__SliceContainer>
      <div
        className="goDieb S1"
      >
        <responsiveweb>
          <div
            className="jdJtXL S1"
          >
            <responsiveweb__Base>
              <div
                className="igsVfT S1"
              >
                <div
                  className="S1"
                >
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="dsMvHC S1"
              />
            </responsiveweb>
            <responsiveweb__Base>
              <div
                className="iDprvs S1"
              >
                <responsiveweb__Base>
                  <div
                    className="0 hqCSCs S1"
                  >
                    <div
                      className="S1"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
                <responsiveweb__Base>
                  <div
                    className="0 dCMhYf S1"
                  >
                    <div
                      className="S1"
                    >
                      support-2
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
